add swipe support when dpad isn't available; performance changes; android 3 / 4 / google tv siupport